--- a/social-clone/index.html
+++ b/social-clone/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/logo-png.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tether - Social Media CLone</title>
+    <title>Tether - Social Media Clone</title>
   </head>
   <body>
     <div id="root"></div>
